import Foundation

enum TimerType: String, Codable, CaseIterable {
    case amrap     = "AMRAP"
    case emom      = "EMOM"
    case forTime   = "For Time"
    case intervals = "Intervals"
    case reps      = "Reps"
    case manual    = "Manual"

...
